feat: new jmn_title block and style jmn-top

--- a/EMS/core-bundle/assets/css/component/json_menu_nested.scss
+++ b/EMS/core-bundle/assets/css/component/json_menu_nested.scss
@@ -24,6 +24,12 @@
         font-size: 1em;
     }
 
+    .jmn-top {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+
     .jmn-wrapper {
         position: relative;
         display: inline-table;
