--- a/demo/skeleton/template_ems/dashboard/sitemap.twig
+++ b/demo/skeleton/template_ems/dashboard/sitemap.twig
@@ -5,6 +5,7 @@
     {% endif %}
     {%  set locale = app.request.query.get('locale', locales|first) %}
 
+    {% set environments = ['preview','live'] %}
     {% set sections = emsch_search('section', {
         "_source": ['label', 'structure'],
         "size": 100,
@@ -22,16 +23,15 @@
         </ul>
        <div class="tab-content">
             {% for l in locales %}
-                <div class="{{ html_classes('tab-pane', { 'active': l == locale }) }}" id="tab-{{ l}}">
+                <div class="{{ html_classes('tab-pane p-2', { 'active': l == locale }) }}" id="tab-{{ l}}">
                     {% for section in sections %}
-                        <h2 class="h3">{{ section._source.label }}</h2>
-                        {% set environments = ['preview','live'] %}
                         {{ component('json_menu_nested', {
                             'id': "section-#{section._id}",
                             'ems_link': "ems://object:#{section._source._contenttype}:#{section._id}",
                             'field_path': '[structure]',
                             'template': '@EMSCH/template_ems/dashboard/json_menu_nested.twig',
                             'context': {
+                                'sectionLabel': section._source.label,
                                 'locale': locale,
                                 'current_path': path(app.request.attributes.get('_route'),
                                     app.request.attributes.get('_route_params')|merge({action: 'create'})),
