--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -118,9 +118,7 @@
 {%- endblock jmn_menu_add -%}
 
 {%- block jmn_button_add -%}
-    <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fa fa-plus"></i> Add
-    </button>
+    <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown jmn-dropdown-add" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add</button>
 {%- endblock jmn_button_add -%}
 
 {%- block jmn_button_menu_add -%}
@@ -142,9 +140,7 @@
 {%- endblock jmn_button_menu_more -%}
 
 {%- block jmn_button_more -%}
-    <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-btn-more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fa fa-ellipsis-v"></i>
-    </button>
+    <button type="button" class="btn btn-sm btn-default dropdown-toggle jmn-dropdown-more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 {%- endblock jmn_button_more -%}
 
 {%- block jmn_menu_more -%}
