--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
@@ -4,6 +4,13 @@
 
 // COLORS
 // --------------------------------------------------------
+$elasticms_pink: #EF79AC;
+$elasticms_yellow: #D5B90B;
+$elasticms_light_blue: #00A7E2;
+$elasticms_dark_blue: #117bbb;
+$elasticms_lagoon: #00BCB1;
+$elasticms_green: #A5D13C;
+
 $blue: #0073b7 !default;
 $lightblue: #3c8dbc !default;
 $navy: #001f3f !default;
