--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_bootstrap-variables.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_bootstrap-variables.scss
@@ -209,7 +209,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns:                12 !default;
-$grid-gutter-width:           15px !default;
+$grid-gutter-width:           1.5rem !default;
 
 // Components
 //
