--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/index.html.twig
@@ -6,8 +6,8 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="{{ 'view.icon.class.channel'|trans }}"></i> {{ 'channel.menu'|trans }}</li>
-   	</ol>
+		<li class="breadcrumb-item"><i class="{{ 'view.icon.class.channel'|trans }}"></i> {{ 'channel.menu'|trans }}</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
