--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/action/action.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/action/action.html.twig
@@ -5,15 +5,15 @@
 {% block title %}{{ block('folderTitle') }}{% endblock %}
 {% block pagetitle %}{{ block('title') }}{% endblock %}
 {% block subtitle %}{% endblock %}
-
+{# syv: blind fix / to check #}
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> {{ 'view.menu.breadcrumb.content-types'|trans }}</a></li>
-        <li><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon|default('fa fa-square') }}"></i> {{ contentType.singularName }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> {{ 'view.menu.breadcrumb.content-types'|trans }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon|default('fa fa-square') }}"></i> {{ contentType.singularName }}</a></li>
         {% if app.request.get('_route') != 'ems_core_action_index' %}
-            <li><a href="{{ path("ems_core_action_index", {contentType: contentType.id}) }}">{{ block('folderTitle') }}</a></li>
+            <li class="breadcrumb-item"><a href="{{ path("ems_core_action_index", {contentType: contentType.id}) }}">{{ block('folderTitle') }}</a></li>
         {% endif %}
-        <li class="active">{{ block('title') }}</li>
+        <li class="breadcrumb-item active">{{ block('title') }}</li>
     </ol>
 {% endblock %}
 
