--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/admin-form/abstract.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/admin-form/abstract.html.twig
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><a href="{{ path('emsco_form_admin_index') }}"><i class="{{ 'view.icon.class.form'|trans }}"></i> {{ 'form.menu'|trans }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('emsco_form_admin_index') }}"><i class="{{ 'view.icon.class.form'|trans }}"></i> {{ 'form.menu'|trans }}</a></li>
         {% block breadcrumb_items %}{% endblock breadcrumb_items %}
     </ol>
 {% endblock %}
