--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/analyzer/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/analyzer/add.html.twig
@@ -6,14 +6,14 @@
 {% block subtitle %}<small>{{ 'expert mode'|trans }}</small>{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('ems_analyzer_index') }}"><i class="fa fa-signal"></i> {{ 'Analyzers'|trans }}</a></li>
-		<li>{{ 'Add an analyzer'|trans }}</li>
-   	</ol>
+		<li class="breadcrumb-item"><a href="{{ path('ems_analyzer_index') }}"><i class="fa fa-signal"></i> {{ 'Analyzers'|trans }}</a></li>
+		<li class="breadcrumb-item">{{ 'Add an analyzer'|trans }}</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
 
-    {% include "@EMSCore/analyzer/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/analyzer/form.html.twig" with {
     	form: form,
     	label: 'Add an analyzer',
     } %}
