--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/analyzer/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/analyzer/form.html.twig
@@ -2,13 +2,12 @@
 
 <div class="row">
 	<div class="col-md-3">
-		<div class="box ">
-			<div class="box-header with-border">
-				<i class="fa fa-warning"></i>
-				<h3 class="box-title">{{ 'Notice'|trans }}</h3>
+		<div class="card card-warning card-outline">
+			<div class="card-header">
+				<h3 class="card-title"><i class="fa fa-warning"></i> {{ 'Notice'|trans }}</h3>
 			</div>
 			<!-- /.box-header -->
-			<div class="box-body">
+			<div class="card-body">
 				<p>
 					{{ 'All environments have to be re-builded each times that the analyzers configuration is updated.'|trans|raw }}
 				</p>
@@ -18,24 +17,23 @@
 	</div>
 	<div class="col-md-9">
 		<!-- general form elements -->
-		<div class="box box-primary">
-			<div class="box-header with-border">
-				<h3 class="box-title">{{ label|trans }}</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header">
+				<h3 class="card-title">{{ label|trans }}</h3>
 			</div>
 			<!-- /.box-header -->
-            <!-- form start -->
-            {{ form_start(form) }}	
-            	<div class="box-body">
-            		{{ form_row(form.name) }}
-            		{{ form_row(form.label) }}
-            		{{ form_widget(form.options) }}
-            	</div>
-            	<!-- /.box-body -->
-            	<div class="box-footer">
-            		{{ form_widget(form.save) }}
-            	</div>
-            {{ form_end(form) }}
-			
+			<!-- form start -->
+			{{ form_start(form) }}
+			<div class="card-body">
+				{{ form_row(form.name) }}
+				{{ form_row(form.label) }}
+				{{ form_widget(form.options) }}
+			</div>
+			<!-- /.box-body -->
+			<div class="card-footer">
+				{{ form_widget(form.save) }}
+			</div>
+			{{ form_end(form) }}
 		</div>
 		<!-- /.box -->
 	</div>
