--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/add.html.twig
@@ -6,13 +6,13 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('ems_core_channel_index') }}"><i class="{{ 'view.icon.class.channel'|trans }}"></i> {{ 'channel.menu'|trans }}</a></li>
-		<li>{{ block('title') }}</li>
-   	</ol>
+		<li class="breadcrumb-item"><a href="{{ path('ems_core_channel_index') }}"><i class="{{ 'view.icon.class.channel'|trans }}"></i> {{ 'channel.menu'|trans }}</a></li>
+		<li class="breadcrumb-item">{{ block('title') }}</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
-    {% include "@EMSCore/channel/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/channel/form.html.twig" with {
     	label: 'channel.add.title',
 		save_action_key: 'channel.add.save',
     } %}
