--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/form.html.twig
@@ -1,14 +1,14 @@
 {% trans_default_domain 'EMSCoreBundle' %}
-
+{# syv: blind fix / to check #}
 <div class="row">
-	<div class="col-md-12">
-		<div class="box box-primary">
+	<div class="col-12">
+		<div class="card card-{{ theme_color }} card-outline">
 			{{ form_start(form) }}
-			<div class="box-header with-border">
-				<h3 class="box-title">{{ label|trans }}</h3>
+			<div class="card-header">
+				<h3 class="card-title">{{ label|trans }}</h3>
 			</div>
 
-			<div class="box-body">
+			<div class="card-body">
 				<div class="row">
 					{{ form_row(form.label) }}
 					<div class="clearfix"></div>
@@ -23,12 +23,12 @@
 					{% endfor %}
 				</div>
 			</div>
-			<div class="box-footer">
+			<div class="card-footer">
 				{{ form_widget(form.save, {
 					'label': save_action_key
 				}) }}
 			</div>
-            {{ form_end(form) }}
+			{{ form_end(form) }}
 		</div>
 	</div>
 </div>
