--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/menu.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/menu.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'channel' %}
-
+{# syv: usefulness? #}
 {% if channels|default([])|length > 0 %}
     <li class="nav-item dropdown">
         <a class="nav-link" data-bs-toggle="dropdown" href="#">
