--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/add.html.twig
@@ -9,17 +9,17 @@
 
 <div class="row">
 	<div class="col-md-6">
-		<div class="box ">
-			<div class="box-header with-border">
-				<i class="fa fa-warning"></i>
-				<h3 class="box-title">Notice</h3>
+		<div class="card card-warning card-outline">
+			<div class="card-header">
+				<h3 class="card-title"><i class="fa fa-warning"></i> Notice</h3>
 			</div>
 			<!-- /.box-header -->
-			<div class="box-body">
+			<div class="card-body">
 				<p>
 					This operation will <strong>not</strong> directly create a <strong>new Content Type</strong>.
 					But it will just instianciate a new draft.
-				</p><p>
+				</p>
+				<p>
 					Until that draft is released nothing will transmited to Elasticsearch.
 					Take the time you need to review the Content Type.
 				</p>
@@ -29,15 +29,15 @@
 	</div>
 	<div class="col-md-6">
 		<!-- general form elements -->
-		<div class="box box-primary">
-			<div class="box-header with-border">
-				<h3 class="box-title">New Content Type</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header">
+				<h3 class="card-title">New Content Type</h3>
 			</div>
 			<!-- /.box-header -->
 			<!-- form start -->
 			{{ form_start(form) }}
 
-				<div class="box-body">
+				<div class="card-body">
 					{{ form_row(form.name) }}
 					{{ form_row(form.singularName) }}
 					{{ form_row(form.pluralName) }}
@@ -46,7 +46,7 @@
 
 				</div>
 				<!-- /.box-body -->
-				<div class="box-footer">
+				<div class="card-footer text-end">
 					{{ form_widget(form.save) }}
 
                     {# 					{% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {#}
