--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/edit.html.twig
@@ -5,24 +5,23 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
-        <li class="active">edit</li>
+        <li class="breadcrumb-item"><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
+        <li class="breadcrumb-item active">edit</li>
     </ol>
 {% endblock %}
-
+{# syv: blind fix / to check #}
 {% block body %}
 
     {{ form_start(form) }}
 
     <div class="row">
-        <div class="col-md-12">
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-sitemap"></i>
-                    <h3 class="box-title">{{ contentType.singularName }}'s metas</h3>
+        <div class="col-12">
+            <div class="card card-{{ theme_color }} card-outline">
+                <div class="card-header">
+                    <h3 class="card -title"><i class="fa fa-sitemap"></i> {{ contentType.singularName }}'s metas</h3>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body">
+                <div class="card-body">
                     <div class="col-md-4">
                         {# 						{{ form_row(form.active) }}#}
                         {{ form_row(form.rootContentType) }}
@@ -92,46 +91,48 @@
 
                     {% if mapping %}
                         <div class="col-md-8">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title">
+                            <div class="card card-light">
+                                <div class="card-header">
+                                    <h3 class="card-title">
                                         <i class="fa fa-sliders"></i> Mapping
-                                        <a class="toggle-button pull-right" role="button" data-toggle="collapse"
-                                           href="#mapping-info" aria-expanded="false" aria-controls="mapping-info"
-                                           data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
-                                            Show <i class="fa fa-chevron-right"></i>
-                                        </a>
                                     </h3>
+                                    <a class="toggle-button float-end" role="button" data-bs-toggle="collapse"
+                                       href="#mapping-info" aria-expanded="false" aria-controls="mapping-info"
+                                       data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
+                                        Show <i class="fa fa-chevron-right"></i>
+                                    </a>
                                 </div>
-
-                                <div class="panel-body collapse" id="mapping-info">
-								<pre class="ems-code-editor" data-language="ace/mode/json"
-                                     data-them="ace/theme/chrome">{{ mapping|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
+                                <div class="collapse" id="mapping-info">
+                                    <div class="card-body">
+                                        <pre class="ems-code-editor" data-language="ace/mode/json" data-them="ace/theme/chrome">{{ mapping|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     {% endif %}
 
                     <div class="col-md-8">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">
+                        <div class="card card-light">
+                            <div class="card-header">
+                                <h3 class="card-title">
                                     <i class="fa fa-tags"></i> Versioning
-                                    <a class="toggle-button pull-right" role="button" data-toggle="collapse"
-                                       href="#versioning" aria-expanded="false" aria-controls="mapping-info"
-                                       data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
-                                        Show <i class="fa fa-chevron-right"></i>
-                                    </a>
                                 </h3>
+                                <a class="toggle-button float-end" role="button" data-bs-toggle="collapse"
+                                   href="#versioning" aria-expanded="false" aria-controls="versioning"
+                                   data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
+                                    Show <i class="fa fa-chevron-right"></i>
+                                </a>
                             </div>
                             {% if form.versionFields is defined %}
-                                <div class="panel-body collapse" id="versioning">
-                                    <div class="row">
-                                        {% for versionField in form.versionFields %}
-                                            <div class="col-md-4">{{ form_row(versionField) }}</div>
-                                        {% endfor %}
-                                        <div class="col-md-4">{{ form_row(form.versionTags) }}</div>
-                                        <div class="col-md-8">{{ form_row(form.versionOptions) }}</div>
+                                <div class="collapse" id="versioning">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            {% for versionField in form.versionFields %}
+                                                <div class="col-md-4">{{ form_row(versionField) }}</div>
+                                            {% endfor %}
+                                            <div class="col-md-4">{{ form_row(form.versionTags) }}</div>
+                                            <div class="col-md-8">{{ form_row(form.versionOptions) }}</div>
+                                        </div>
                                     </div>
                                 </div>
                             {% endif %}
@@ -156,7 +157,7 @@
                     </div>
                 </div>
                 <!-- /.box-body -->
-                <div class="box-footer">
+                <div class="card-footer">
                     <div class="btn-group">
                         {{ form_widget(form.save) }}
                         {{ form_widget(form.saveAndUpdateMapping) }}
