--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/json_update.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/json_update.html.twig
@@ -4,15 +4,15 @@
 {% block pagetitle %}{{ block('title') }}{% endblock %}
 {% block subtitle %}<small>{{ 'form.contenttype.json_update.subtitle'|trans({'%content_type%': contentType.singularName }) }}</small>{% endblock %}
 
-
+{# syv: blind fix / to check #}
 {% block body %}
 	<div class="row">
-		<div class="col-md-4 col-md-offset-4">
-			<div class="box box-primary">
-				<div class="box-header with-border">
-					<h3 class="box-title">{{ block('title') }}</h3>
+		<div class="col-md-4 offset-md-4">
+			<div class="card card-{{ theme_color }} card-outline">
+				<div class="card-header">
+					<h3 class="card-title">{{ block('title') }}</h3>
 				</div>
-				<div class="box-body with-border">
+				<div class="card-body">
 					{{ form_start(form) }}
 					{{ form_end(form) }}
 				</div>
