--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder.html.twig
@@ -10,47 +10,46 @@
    		<li class="active">{{ 'Reorder'|trans }}</li>
    	</ol>
 {% endblock %}
-
+{# syv: blind fix / to check #}
 {% block body %}
-
 <div class="row">
-	<div class="col-md-12">
-		<div class="box box-solid">
-			<div class="box-header with-border">
-				<h2 class="box-title">
+	<div class="col-12">
+		<div class="card card-{{ theme_color }} card-outline border-0">
+			<div class="card-header">
+				<h2 class="card-title">
 					<i class="{% if contentType.icon %}{{ contentType.icon }} {% else %} fa fa-question {% endif %} "></i>
 					{{ 'Reorder %name%\'s fields'|trans({'%name%': contentType.name}) }}
 				</h2>
 
-				<div class="btn-group  pull-right">
+				<div class="btn-group float-end">
 					<a class="btn btn-xs btn-primary" href="{{ path('ems_contenttype_field_edit', { contentType: contentType.id, field: contentType.fieldType.id }) }}">
 						<i class="fa fa-edit"></i>
-                        {{ 'view.contenttype.reorder_item.edit_main_container_button'|trans() }}
+						{{ 'view.contenttype.reorder_item.edit_main_container_button'|trans() }}
 					</a>
 				</div>
 			</div>
-            {{ form_start(form) }}
-				<div class="box-body no-padding">
-					<ol class="nested-sortable vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
-						{% include "@EMSCore/contenttype/reorder_item.html.twig" with {
-							parent: contentType.fieldType
-						} %}
-					</ol>
-				</div>
-				<!-- /.box-body -->
-				<div>
-					{% if form.addItem is defined  %}
+			{{ form_start(form) }}
+			<div class="card-body p-0">
+				<ol class="nested-sortable vertical" id="root-list" data-nested-max-level="15" data-nested-is-tree="true">
+					{% include "@EMSAdminUI/bootstrap5/contenttype/reorder_item.html.twig" with {
+						parent: contentType.fieldType
+					} %}
+				</ol>
+			</div>
+			<!-- /.box-body -->
+			<div>
+				{% if form.addItem is defined %}
 					<div class="box-footer">
 						{{ form_row(form.addItem) }}
 					</div>
 					<!-- /.box-footer -->
-					{% endif %}
-					<div class="box-footer">
-						<div class="btn-group">
-							{{ form_widget(form.reorder) }}
-						</div>
+				{% endif %}
+				<div class="card-footer">
+					<div class="btn-group">
+						{{ form_widget(form.reorder) }}
 					</div>
 				</div>
+			</div>
 			{{ form_end(form) }}
 			<!-- /.box-footer -->
 		</div>
