--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder_item.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder_item.html.twig
@@ -1,26 +1,25 @@
 {% trans_default_domain 'EMSCoreBundle' %}
 {% for child in parent.children|filter(child => not child.deleted) %}
-
-       	<li id="{{ child.id }}" class="{% if not (child.type~'::isContainer')|call_user_func %}mjs-nestedSortable-no-nesting{% endif %}">
-        		<div class="box-header">
-					<b>{{ child.name }}</b> {{ child.type }}
-
-					<div class="btn-group  pull-right">
-                        {% if contentType is defined %}
-                            <a class="btn btn-xs btn-primary" href="{{ path('ems_contenttype_field_edit', { contentType: contentType.id, field: child.id }) }}">
-                                <i class="fa fa-edit"></i>
-                                {{ 'view.contenttype.reorder_item.edit_field_button'|trans({'%name%': child.name}) }}
-                            </a>
-                        {% endif %}
-					</div>
-        		</div>
-        		{% if (child.type~'::isContainer')|call_user_func and child.children|length > 0  %}
-        			<ol>
-                        {% include "@EMSCore/contenttype/reorder_item.html.twig" with {
-                    		parent: child
-                    	} %}
-        			</ol>
-            	{% endif %}
-        	</li>
+	{# syv: blind fix / to check #}
+	<li id="{{ child.id }}" class="{% if not (child.type~'::isContainer')|call_user_func %}mjs-nestedSortable-no-nesting{% endif %}">
+		<div class="card-header">
+			<strong>{{ child.name }}</strong> {{ child.type }}
+			<div class="btn-group float-end">
+				{% if contentType is defined %}
+					<a class="btn btn-xs btn-primary" href="{{ path('ems_contenttype_field_edit', { contentType: contentType.id, field: child.id }) }}">
+						<i class="fa fa-edit"></i>
+						{{ 'view.contenttype.reorder_item.edit_field_button'|trans({'%name%': child.name}) }}
+					</a>
+				{% endif %}
+			</div>
+		</div>
+		{% if (child.type~'::isContainer')|call_user_func and child.children|length > 0 %}
+			<ol>
+				{% include "@EMSAdminUI/bootstrap5/contenttype/reorder_item.html.twig" with {
+					parent: child
+				} %}
+			</ol>
+		{% endif %}
+	</li>
 
 {% endfor %}
