--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/structure.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/structure.html.twig
@@ -2,40 +2,31 @@
 
 {% block title %}Edit "{{ contentType.singularName }}"  structure{% endblock %}
 {% block pagetitle %}Edit "{{ contentType.singularName }}" structure{% endblock %}
-
+{# syv: blind fix / to check #}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
-		<li><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Edit {{ contentType.singularName }}</a></li>
-   		<li class="active">Structure</li>
-   	</ol>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Edit {{ contentType.singularName }}</a></li>
+		<li class="breadcrumb-item active">Structure</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
-
 	{{ form_start(form) }}
-
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-12">
 
-			<div class="box ">
-				<div class="box-header with-border">
-					<i class="fa fa-sitemap"></i>
-					<h3 class="box-title">{{ contentType.singularName }}'s metas</h3>
+			<div class="card card-{{ theme_color }} card-outline">
+				<div class="card-header">
+					<h3 class="card-title"><i class="fa fa-sitemap"></i> {{ contentType.singularName }}'s metas</h3>
 				</div>
 				<!-- /.box-header -->
-				<div class="box-body">
-
-				<div class="col-md-12">
+				<div class="card-body">
 						{{ form_row(form.fieldType) }}
 				</div>
-
-
-
-				</div>
 				<!-- /.box-body -->
-				<div class="box-footer">
-					<div class="btn-group pull-right">
+				<div class="card-footer">
+					<div class="btn-group float-end">
 						{{ form_widget(form.save) }}
 						{{ form_widget(form.saveAndClose) }}
 						{{ form_widget(form.saveAndReorder) }}
