--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/unreferenced.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/unreferenced.html.twig
@@ -5,56 +5,51 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types`</a></li>
-   		<li class="active">add referenceable content type</li>
-   	</ol>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
+		<li class="breadcrumb-item active">add referenceable content type</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
-<div class="row">
-	<div class="col-md-12">
-		<div class="box ">
-			<div class="box-header with-border">
-				<i class="fa fa-sitemap"></i>
-				<h3 class="box-title">Referenceable content types</h3>
-			</div>
-			<!-- /.box-header -->
-			<div class="box-body">
-				<div class="table-responsive">
-				<table class="table table-condensed table-striped">
-					<tbody>
-						<tr>
-							<th class="text-center" style="width: 10px">#</th>
-							<th class="" style="">Name</th>
-							<th>Index</th>
-							<th>Action</th>
-						</tr>
-						{% for contentType in referencedContentTypes %}
-							<tr class="">
-								<td class="text-center">{{ loop.index }}.</td>
-								<td>{{ contentType.name }}</td>
-								<td>{{ contentType.alias }}</td>
-								<td>
-
-									<div class="btn-group">
-                                        {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
-											'url':  path('contenttype.unreferenced', {'name': contentType.name, 'envId': contentType.envId}),
-											'label': 'Add',
-											'icon': 'plus'
-										}%}
-				                    </div>
-
-
-								</td>
-							</tr>
-						{% endfor %}
-					</tbody>
-				</table>
+	<div class="row">
+		<div class="col-12">
+			<div class="card card-{{ theme_color }} card-outline">
+				<div class="card-header">
+					<h3 class="card-title"><i class="fa fa-sitemap"></i> Referenceable content types</h3>
 				</div>
-
+				<!-- /.box-header -->
+				<div class="card-body">
+					<div class="table-responsive">
+						<table class="table table-condensed table-striped">
+							<tbody>
+							<tr>
+								<th class="text-center" style="width: 10px">#</th>
+								<th class="" style="">Name</th>
+								<th>Index</th>
+								<th>Action</th>
+							</tr>
+							{% for contentType in referencedContentTypes %}
+								<tr class="">
+									<td class="text-center">{{ loop.index }}.</td>
+									<td>{{ contentType.name }}</td>
+									<td>{{ contentType.alias }}</td>
+									<td>
+										<div class="btn-group">
+											{% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
+												'url':  path('contenttype.unreferenced', {'name': contentType.name, 'envId': contentType.envId}),
+												'label': 'Add',
+												'icon': 'plus'
+											} %}
+										</div>
+									</td>
+								</tr>
+							{% endfor %}
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<!-- /.box-body -->
 			</div>
-			<!-- /.box-body -->
 		</div>
 	</div>
-</div>
 {% endblock %}
