--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/alerts.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/alerts.twig
@@ -7,7 +7,7 @@
     {% set alerts = app.session.flashbag.get(type) %}
     {% if alerts|length > 0 %}
         <div class="alert alert-{{ config.class }} alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             <h4><i class="icon fa {{ config.icon }}"></i> {{ config.title }} </h4>
             {% for alert in alerts %}
                 <div class="flash-{{ type }}">
