--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/modal.html.twig
@@ -1,8 +1,8 @@
-<div class="modal core-modal fade" id="{{ id }}" tabindex="-1" role="dialog">
+<div class="modal core-modal fade" id="{{ id }}" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-{{ size|default('md') }}" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title"></h4>
             </div>
             <div class="modal-body modal-loading">
@@ -14,7 +14,7 @@
             </div>
             <div class="modal-body ajax-modal-body" style="display:none;"></div>
             <div class="modal-footer ajax-modal-footer">
-                <button type="button" class="btn  btn-sm btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
