--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/dashboard/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/dashboard/form.html.twig
@@ -2,15 +2,15 @@
 {% trans_default_domain 'emsco-twigs' %}
 
 
-{% block breadcrumb_items %}<li>{{ block('title') }}</li>{% endblock breadcrumb_items %}
+{% block breadcrumb_items %}<li class="breadcrumb-item active">{{ block('title') }}</li>{% endblock breadcrumb_items %}
 
 
 {% block body %}
     <div class="row">
-        <div class="col-md-12">
-            <div class="box box-primary">
+        <div class="col-12">
+            <div class="card card-{{ theme_color }} card-outline">
                 {{ form_start(form) }}
-                <div class="box-body">
+                <div class="card-body">
                     <div class="row">
                         {{ form_row(form.name) }}
                         <div class="clearfix"></div>
@@ -35,7 +35,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="box-footer">
+                <div class="card-footer">
                     {%  if form.create is defined %}
                         {{ form_widget(form.create) }}
                     {% endif %}
