--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/align.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/align.html.twig
@@ -3,10 +3,10 @@
 {% block title %}{{ 'Align Environments'|trans }}{% endblock %}
 {% block pagetitle %}{{ 'Align Environments'|trans }}{% endblock %}
 {% block breadcrumb %}
-	<ol class="breadcrumb">
-		<li><i class="fa fa-database"></i> {{ 'Environments'|trans }}</li>
-   		<li class="active">{{ 'Align Environments'|trans }}</li>
-   	</ol>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><i class="fa fa-database"></i> {{ 'Environments'|trans }}</li>
+        <li class="breadcrumb-item active">{{ 'Align Environments'|trans }}</li>
+    </ol>
 {% endblock %}
 
 {% block subtitle %}
@@ -17,49 +17,53 @@
 
 <div class="row">
 {{ form_start(form) }}
-	<div class="col-xs-12">
-	<div class="box box-primary">
-      <div class="box-header with-border">
-        <h3 class="box-title">{{ 'Select Environments to compare'|trans }}</h3>
-      </div>
-      <!-- /.box-header -->
-      <!-- form start -->
-        <div class="box-body">
-        	<div class="col-md-6">
-        	{{ form_row(form.environment) }}
-        	</div>
-        	<div class="col-md-6">
-        	{{ form_row(form.withEnvironment) }}
-        	</div>
-        </div>
-        <!-- /.box-body -->
+    <div class="col">
+        <div class="card card-{{ theme_color }} card-outline">
+            <div class="card-header">
+                <h3 class="card-title">{{ 'Select Environments to compare'|trans }}</h3>
+            </div>
+            <!-- /.box-header -->
+            <!-- form start -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_row(form.environment) }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form_row(form.withEnvironment) }}
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
 
-      <div class="box-header with-border">
-        <h3 class="box-title">{{ 'Filters' | trans }}</h3>
-      </div>
-        <div class="box-body">
-        	<div class="col-md-6">
-        	{{ form_row(form.contentTypes) }}
-        	</div>
-        </div>
-        <!-- /.box-body -->
+            <div class="card-header">
+                <h3 class="card-title">{{ 'Filters' | trans }}</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_row(form.contentTypes) }}
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
 
-        <div class="box-footer">
-        	{{ form_row(form.compare) }}
+            <div class="card-footer">
+                {{ form_row(form.compare) }}
+            </div>
+            {{ form_errors(form) }}
         </div>
-         {{ form_errors(form) }}
     </div>
-	</div>
 
 {% if results %}
-	<div class="col-md-12">
-		<div class="box">
-      <div class="box-header">
+	<div class="col">
+		<div class="card">
+      <div class="card-header">
 
       	{% set fromInMyCircles = environments[environment].circles|in_my_circles %}
       	{% set toInMyCircles = environments[withEnvironment].circles|in_my_circles %}
 
-        <h3 class="box-title">Compare "{{ environment }}" and "{{ withEnvironment }}"</h3> <small>{{ total }} difference(s)</small>
+        <h3 class="card-title">Compare "{{ environment }}" and "{{ withEnvironment }}"</h3> <small>{{ total }} difference(s)</small>
 
           {% include '@EMSAdminUI/bootstrap5/elements/pagination.html.twig' with {
 					'lastPage': lastPage,
@@ -71,7 +75,7 @@
 
       </div>
       <!-- /.box-header -->
-      <div class="box-body no-padding">
+      <div class="card-body no-padding">
 			  <div class="table-responsive">
         <table class="table dataTable">
           <thead>
