--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
@@ -267,14 +267,15 @@
     <div class="row">
         <div class="col-md-12">
             {{ form_start(form) }}
-            <div class="box ">
+            <div class="card card-{{ theme_color }} card-outline">
                 {% if form.vars.title_label|default(false) %}
-                    <div class="box-header with-border">
+                    <div class="card-header">
                         <h2 class="box-title">{{ form.vars.title_label|trans }}</h2>
                     </div>
                 {% endif %}
-                <div class="box-header with-border">
-                    <div class="btn-group  pull-right">
+                {# TODO: syv/ if toolbar or table actions ? #}
+                <div class="card-header">
+                    <div class="btn-group btn-group-sm float-end">
                         {% if toolbar is defined %}
                             {{ toolbar }}
                         {% endif %}
@@ -285,7 +286,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="box-body with-border">
+                <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-condensed table-striped" data-datatable="{{ table.frontendOptions|json_encode|e('html_attr') }}">
                             <thead>
@@ -334,16 +335,16 @@
                     </div>
                 </div>
                 {% if table.supportsTableActions or toolbar is defined %}
-                    <div class="box-footer with-border">
+                    <div class="card-footer">
                         {% if table.supportsTableActions %}
-                            <div class="btn-group">
+                            <div class="btn-group btn-group-sm">
                                 {% for action in table.tableActions %}
                                     {{ form_widget(attribute(form, action.name)) }}
                                 {% endfor %}
                             </div>
                         {% endif %}
                         {% if toolbar is defined %}
-                            <div class="btn-group">
+                            <div class="btn-group btn-group-sm">
                                 {{ toolbar }}
                             </div>
                         {% endif %}
@@ -364,7 +365,7 @@
                                 <ul class="list-group sortable" id="{{ table.attributeName|e('html_attr') }}_modal_reorder_list">
                                     {% for child in form.reordered %}
                                         <li class="list-group-item">
-                                            <i class="glyphicon glyphicon-move"></i>
+                                            <i class="fa-solid fa-up-down-left-right" aria-hidden="true"></i>
 
                                             {% for line in table|filter(line => child.vars.value == line.data.id) %}
                                                 {{ attribute(line.data, table.labelAttribute) }}
