--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/add.html.twig
@@ -6,13 +6,15 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('emsco_release_index') }}"><i class="{{ 'view.icon.class.release'|trans }}"></i> {{ 'release.menu'|trans }}</a></li>
-		<li>{{ block('title') }}</li>
-   	</ol>
+		<li class="breadcrumb-item">
+			<a href="{{ path('emsco_release_index') }}"><i class="{{ 'view.icon.class.release'|trans }}"></i> {{ 'release.menu'|trans }}
+			</a></li>
+		<li class="breadcrumb-item">{{ block('title') }}</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
-    {% include "@EMSCore/release/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/release/form.html.twig" with {
     	label: 'release.add.title',
     } %}
 {% endblock %}
