--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/form.html.twig
@@ -2,12 +2,12 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<div class="box box-primary">
-			<div class="box-header with-border">
-				<h3 class="box-title">{{ label|trans }}</h3>
+		<div class="card card-{{ theme_color }} card-outline">
+			<div class="card-header">
+				<h3 class="card-title">{{ label|trans }}</h3>
 			</div>
 			{{ form_start(form_release) }}
-				<div class="box-body">
+				<div class="card-body">
 					<div class="row">
 						{{ form_row(form_release.name) }}
 						<div class="clearfix"></div>
@@ -17,7 +17,7 @@
 						{{ form_row(form_release.environmentTarget) }}
 					</div>
 				</div>
-				<div class="box-footer">
+				<div class="card-footer">
 					<div class="btn-group">
 						{% if form_release.save is defined %}
 							{{ form_widget(form_release.save) }}
@@ -30,7 +30,7 @@
             {{ form_end(form_release) }}
 		</div>
 		{% if release is defined and release.status == 'wip' %}
-			<div class="box-footer">
+			<div class="card-footer">
 				<div class="btn-group">
 					{% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
 						'url':  path('emsco_release_add_revisions', {'release': release.id} ),
