--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/edit.html.twig
@@ -5,39 +5,41 @@
 {% block subtitle %}<small>User administration</small>{% endblock %}
 
 {% block body %}
-	<div class="box box-primary">
-		<div class="box-header with-border">
-			<h3 class="box-title">Edit user {{ user.username }}</h3>
-		</div>
-		{{ form_start(form, { 'action': path('emsco_user_edit', {'user': user.id}) }) }}
-    <div class="box-body">
-    	<div class="col-md-6">
-	    	{{ form_row(form.username) }}
-	    	{{ form_row(form.displayName) }}
-			{{ form_row(form.locale) }}
-			{{ form_row(form.localePreferred) }}
-	    	{{ form_row(form.email) }}
-	    	{{ form_row(form.emailNotification) }}
-	    	{{ form_row(form.enabled) }}
-	    	{% if form.circles is defined %}
-	    	    {{ form_row(form.circles) }}
-	    	{% endif %}
-			{{ form_row(form.wysiwygProfile) }}
-    	</div>
-    	<div class="col-md-6">
-            {% if form.userOptions.custom_options is defined %}
-                <div class="row">
-                    {{ form_row(form.userOptions.custom_options) }}
+    <div class="card card-{{ theme_color }} card-outline">
+        <div class="card-header">
+            <h3 class="card-title">Edit user {{ user.username }}</h3>
+        </div>
+        {{ form_start(form, { 'action': path('emsco_user_edit', {'user': user.id}) }) }}
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-6">
+                    {{ form_row(form.username) }}
+                    {{ form_row(form.displayName) }}
+                    {{ form_row(form.locale) }}
+                    {{ form_row(form.localePreferred) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.emailNotification) }}
+                    {{ form_row(form.enabled) }}
+                    {% if form.circles is defined %}
+                        {{ form_row(form.circles) }}
+                    {% endif %}
+                    {{ form_row(form.wysiwygProfile) }}
                 </div>
-            {% endif %}
-			{{ form_row(form.userOptions) }}
-	    	{{ form_row(form.roles) }}
-    	</div>
+                <div class="col-md-6">
+                    {% if form.userOptions.custom_options is defined %}
+                        <div class="row">
+                            {{ form_row(form.userOptions.custom_options) }}
+                        </div>
+                    {% endif %}
+                    {{ form_row(form.userOptions) }}
+                    {{ form_row(form.roles) }}
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            {{ form_row(form.update) }}
+        </div>
+        {{ form_end(form) }}
     </div>
-    <div class="box-footer">
-	    	{{ form_row(form.update) }}
-    </div>
-		{{ form_end(form) }}
-	</div>
-	<!-- /.box -->
+    <!-- /.box -->
 {% endblock body %}
