--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/index.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     {%  set toolbar %}
         <a class="btn btn-primary" href="{{ path('emsco_user_add') }}"><i class="fa fa-plus"></i> {{ 'user.add.button'|trans }}</a>
-        <a class="btn btn-default" href="{{ path('emsco_user_spreadsheet_export', {_format: 'xlsx'}) }}"><i class="fa fa-file-excel-o"></i> {{ 'user.export.excel'|trans }}</a>
-        <a class="btn btn-default" href="{{ path('emsco_user_spreadsheet_export', {_format: 'csv'}) }}"><i class="fa fa-file-text-o"></i> {{ 'user.export.csv'|trans }}</a>
+        <a class="btn btn-outline-primary" href="{{ path('emsco_user_spreadsheet_export', {_format: 'xlsx'}) }}"><i class="fa fa-file-excel-o"></i> {{ 'user.export.excel'|trans }}</a>
+        <a class="btn btn-outline-primary" href="{{ path('emsco_user_spreadsheet_export', {_format: 'csv'}) }}"><i class="fa fa-file-text-o"></i> {{ 'user.export.csv'|trans }}</a>
     {%  endset %}
 
     {% form_theme form '@EMSAdminUI/bootstrap5/form/forms.html.twig' %}
